--- a/themes/tatmerch/scss/_site-legacy.scss
+++ b/themes/tatmerch/scss/_site-legacy.scss
@@ -989,10 +989,6 @@ section.otchet img {
 	top: 65px;
 }
 
-section.otchet img.hd {
-	display: none;
-}
-
 .otchet .left {
 	/*width: 50%;*/
 	width: 45%;
